--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-05-21 11:26+0200\n"
+"POT-Creation-Date: 2025-05-27 16:02+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1460,6 +1460,20 @@ msgstr "Prix par article"
 
 msgid "Price per hour"
 msgstr "Prix par heure"
+
+msgid "Prices in extra fields are"
+msgstr "Les prix indiqués dans les champs supplémentaires sont"
+
+msgid ""
+"If no extra fields are defined or none of the extra fields contain pricing "
+"information, then this setting has no effect."
+msgstr ""
+"Si aucun champ supplémentaire n'est défini ou si aucun des champs "
+"supplémentaires ne contient d'informations sur les prix, ce paramètre n'a "
+"aucun effet."
+
+msgid "One-off"
+msgstr "Unique"
 
 msgid ""
 "Failed to retrieve the doors from the dormakaba API please make sure your "
