--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-05-27 16:02+0200\n"
+"POT-Creation-Date: 2025-06-04 16:17+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -2121,8 +2121,19 @@ msgstr ""
 "Format non valide. Veuillez définir les balises et leurs métadonnées "
 "conformément à l'exemple."
 
-msgid "Invalid price, needs to be a non-negative number."
-msgstr "Prix non valide, doit être un nombre non négatif."
+#, python-format
+msgid "Invalid price \"${price}\", needs to be a non-negative number."
+msgstr "Prix non valide \"${price}\", doit être un nombre non négatif."
+
+#, python-format
+msgid ""
+"Invalid color \"${color}\", needs to be a 3 or 6 digit hex code, e.g. "
+"\"ff9000\" for orange. If you use a \"#\" prefix, make sure to enclose the "
+"value in quotation marks."
+msgstr ""
+"Couleur non valide \"${color}\", doit être un code hexadécimal à 3 ou 6 "
+"chiffres, par exemple \"ff9000\" pour l'orange. Si vous utilisez un préfixe "
+"\"#\", veillez à mettre la valeur entre guillemets."
 
 msgid "Enable newsletter"
 msgstr "Activer la newsletter"
@@ -5024,15 +5035,6 @@ msgstr ""
 "\"éditer\" dans la période de disponibilité, puis \"enregistrer\" sans rien "
 "changer."
 
-msgid "Reservation is pending approval"
-msgstr "La réservation est en attente d'approbation"
-
-msgid "(${num_pending} pending approval)"
-msgstr "(${num_pending} en attente d'approbation)"
-
-msgid "Utilised"
-msgstr "Utilisé"
-
 msgid "No recipients defined yet."
 msgstr "Aucun destinataire défini pour le moment."
 
@@ -5335,6 +5337,9 @@ msgid ""
 msgstr ""
 "Pour supprimer cette allocation, toutes les réservations existantes doivent "
 "être annulées en premier."
+
+msgid "Pending approval"
+msgstr "En attente d'approbation"
 
 msgid "A conflicting allocation exists for the requested time period."
 msgstr "Une allocation contradictoire existe pour la période demandée."
@@ -6472,6 +6477,9 @@ msgstr ""
 
 msgid "Reject all reservations with message"
 msgstr "Refuser toutes les réservations avec le message"
+
+msgid "Reservation not adjustable"
+msgstr "Réservation non ajustable"
 
 msgid "Adjust reservation"
 msgstr "Ajuster la réservation"
